@@ -1594,6 +1594,7 @@ systemSettings.passwordComplexity.digitCount=Minimum numeric characters
 systemSettings.passwordComplexity.specialCount=Minimum special characters
 systemSettings.passwordComplexity.lengthMin=Minimum length
 systemSettings.passwordComplexity.lengthMax=Maximum length
+systemSettings.tags.defaultDisplayTags=Default tags to display on data points
 
 systemInfo.databaseTypeDesc=Database type
 systemInfo.diskInfoListDesc=Disk size information
