@@ -18,6 +18,7 @@
 * Upgrade MySQL connector to 8.0.19 driver classname is now com.mysql.cj.jdbc.Driver
 * Add permission to allow users to change thier own username defaults to allow all users to do this
 * Add new types to Mailing List to allow any phone number and User phone numbers
+* Adding a system setting that allows control over what tags are displayed this defaults to all tags
 
 *Version 3.7.4*
 * Improve work item failure logging
